--- a/index.html
+++ b/index.html
@@ -8,5 +8,15 @@
   </head>
   <body>
     <a href="https://www.techreturners.com/">Tech returners homepage</a>
+    <nav>
+      <ul>
+        <li><a href="#">Newss</a></li>
+        <li><a href="#">Opinion</a></li>
+        <li><a href="#">Tech</a></li>
+        <li><a href="#">Sport</a></li>
+        <li><a href="#">Culture</a></li>
+        <li><a href="#">Lifestyle</a></li>
+      </ul>
+    </nav>
   </body>
 </html>
