--- a/index.html
+++ b/index.html
@@ -18,5 +18,26 @@
         <li><a href="#">Lifestyle</a></li>
       </ul>
     </nav>
+    <section>
+      <h3>Preferences</h3>
+
+      <p>
+        We aim to make this site accessible to a wide audience and to ensure a
+        great experience for all users by conforming to World Wide Web
+        Consortium accessibility guidelines (W3C's WCAG)
+      </p>
+      <p>
+        However, if you are having trouble reading this website you can change
+        the way it looks or disable some of its functionalities.
+      </p>
+
+      <div>
+        <input type="checkbox" id="preferences" name="preferences" checked />
+        <label for="preferences"
+          >Allow flashing elements Untick this to disable flashing and moving
+          elements</label
+        >
+      </div>
+    </section>
   </body>
 </html>
