feat: adds header and sub-header on the article

--- a/index.html
+++ b/index.html
@@ -39,5 +39,10 @@
         >
       </div>
     </section>
+
+    <section>
+      <h1>Accessibility Features: Easy Wins</h1>
+      <h2>Handy tips on how to create accessible websites for everyone</h2>
+    </section>
   </body>
 </html>
