--- a/index.html
+++ b/index.html
@@ -44,5 +44,7 @@
       <h1>Accessibility Features: Easy Wins</h1>
       <h2>Handy tips on how to create accessible websites for everyone</h2>
     </section>
+
+    <a href="mailto:jimmy.eggs@hotmail.com">Jim Eggs (04.08.21)</a>
   </body>
 </html>
