feat: adds image to page

--- a/index.html
+++ b/index.html
@@ -46,5 +46,10 @@
     </section>
 
     <a href="mailto:jimmy.eggs@hotmail.com">Jim Eggs (04.08.21)</a>
+
+    <img
+      src="/accessibility.png"
+      alt="Keyboard with blue accessibility button and partial view of a small world globe"
+    />
   </body>
 </html>
