--- a/index.html
+++ b/index.html
@@ -51,5 +51,22 @@
       src="/accessibility.png"
       alt="Keyboard with blue accessibility button and partial view of a small world globe"
     />
+
+    <section>
+      <h2>Introduction</h2>
+      <p>
+        Tim Berners Lee dreamt of a World Wide Web that would be free and
+        accessible to everyone. Sadly, the modern web is littered with poorly
+        designed websites and difficult to navigate code (for both developers
+        and users). This often comes down to a lack of understanding around
+        different user needs. Designing pages that are accessible for everyone
+        shouldn’t be too difficult. The developers at Tech Returners News have
+        collated an ‘easy wins' checklist for Web page accessibility.
+      </p>
+      <p>
+        Keep this guide handy... When creating your own websites you can check
+        these criteria off the list!
+      </p>
+    </section>
   </body>
 </html>
