feat:adds links to other news articles

--- a/index.html
+++ b/index.html
@@ -67,6 +67,11 @@
         Keep this guide handy... When creating your own websites you can check
         these criteria off the list!
       </p>
+      <p>
+        <a href="#"
+          >What would a truly accessible city look like? Read more..</a
+        >
+      </p>
     </section>
   </body>
 </html>
