feat: Adds accessibility checks section

--- a/index.html
+++ b/index.html
@@ -73,5 +73,50 @@
         >
       </p>
     </section>
+
+    <section>
+      <h2>Accessibility Checks:</h2>
+      <p>
+        Heading elements & Page Titles: HTML heading elements have been used to
+        represent page structure, supporting assistive technologies that allow
+        page navigation from heading to heading.
+      </p>
+      <p>
+        Re-size Text: You can vary text size by using your browser's text resize
+        settings (through Options or Preferences), text-only zoom, page zoom
+        (which also zooms images, buttons etc) without incurring styling issues
+        / text over-lapping or being cut off the page.
+      </p>
+      <p>
+        Alternative text for images: All images have been given appropriate
+        alternative text.
+      </p>
+      <p>
+        Link text: All hyperlinks should make sense when read out of context,
+        and hyperlinks are clearly presented in a different text style from
+        normal body text. If a link opens in a new browser page, it has been
+        labelled as doing so.
+      </p>
+      <p>
+        JavaScript independence: Where JavaScript or other scripts are used for
+        navigation or functionality, an alternative mechanism has been put in
+        place in case your browser does not support these scripts.
+      </p>
+      <p>
+        Colour contrast: has been checked for text and background colour
+        combinations to ensure that the contrast is sufficient and I have also
+        ensured that information is not referenced by colour alone.
+      </p>
+      <p>
+        Style sheets: If style sheets are not supported or are turned off,
+        information on the site can still be accessed and read.
+      </p>
+      <p>
+        Forms: forms are marked up correctly so people can interact with them
+        using only the keyboard, voice input or screen readers. The form labels
+        themselves are clickable, increasing the target area and making it
+        easier to select small radio buttons of checkboxes.
+      </p>
+    </section>
   </body>
 </html>
