feat: Adds link to w3.org

--- a/index.html
+++ b/index.html
@@ -117,6 +117,15 @@
         themselves are clickable, increasing the target area and making it
         easier to select small radio buttons of checkboxes.
       </p>
+      <p>
+        For more information on Web Accessibility view:
+        <a
+          href="https://www.w3.org/WAI/test-evaluate/preliminary/"
+          target="_blank"
+          >Easy Checks – A First Review of Web Accessibility (opens in a new
+          window)</a
+        >
+      </p>
     </section>
   </body>
 </html>
