feat: Add Conclusion section and content

--- a/index.html
+++ b/index.html
@@ -127,5 +127,14 @@
         >
       </p>
     </section>
+
+    <section>
+      <h2>Conclusion</h2>
+      <p>
+        By spending just a little more time on getting the building blocks of
+        the web right, developers can help create an Internet that works for
+        <em>everyone.</em>
+      </p>
+    </section>
   </body>
 </html>
