--- a/index.html
+++ b/index.html
@@ -136,5 +136,34 @@
         <em>everyone.</em>
       </p>
     </section>
+
+    <section>
+      <h3>More stories</h3>
+      <ul>
+        <li><a href="#">Tokyo Olympics: gold for Great Britain!</a></li>
+        <li><a href="#">A day in the life of</a></li>
+        <li>
+          <a href="#"
+            >Call for action as UK driver shortage hits supermarkets</a
+          >
+        </li>
+        <li>
+          <a href="#">The six worst school sports memories of your childhood</a>
+        </li>
+        <li>
+          <a href="#"
+            >Clairvoyants evening cancelled from unforeseen circumstances</a
+          >
+        </li>
+        <li><a href="#">Safety meeting ends in accident</a></li>
+        <li>
+          <a href="#"
+            >Russian traffic officer with golden toilet is arrested after police
+            uncover massive bribery scheme</a
+          >
+        </li>
+        <li><a href="#">Jellyfish apocalypse is coming claim scientists</a></li>
+      </ul>
+    </section>
   </body>
 </html>
