--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <a href="https://www.techreturners.com/">Tech returners homepage</a>
     <nav>
       <ul>
-        <li><a href="#">Newss</a></li>
+        <li><a href="#">News</a></li>
         <li><a href="#">Opinion</a></li>
         <li><a href="#">Tech</a></li>
         <li><a href="#">Sport</a></li>
