feat: Adds footer with links and company logo

--- a/index.html
+++ b/index.html
@@ -165,5 +165,16 @@
         <li><a href="#">Jellyfish apocalypse is coming claim scientists</a></li>
       </ul>
     </section>
+    <footer>
+      <ul>
+        <li><a href="#">News</a></li>
+        <li><a href="#">Opinion</a></li>
+        <li><a href="#">Tech</a></li>
+        <li><a href="#">Sport</a></li>
+        <li><a href="#">Culture</a></li>
+        <li><a href="#">Lifestyle</a></li>
+        <li>© 2021 Tech Returners News</li>
+      </ul>
+    </footer>
   </body>
 </html>
