fix: link to homepage

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Tech Returner News</title>
   </head>
   <body>
-    <a href="https://www.techreturners.com/">Tech returners homepage</a>
+    <a href="#">Tech returners News</a>
     <nav>
       <ul>
         <li><a href="#">News</a></li>
