fix: add link to www.org in Preferences section

--- a/index.html
+++ b/index.html
@@ -23,8 +23,11 @@
 
       <p>
         We aim to make this site accessible to a wide audience and to ensure a
-        great experience for all users by conforming to World Wide Web
-        Consortium accessibility guidelines (W3C's WCAG)
+        great experience for all users by conforming to
+        <a href="https://www.w3.org/" target="_blank"
+          >World Wide Web Consortium (opens in a new window)</a
+        >
+        accessibility guidelines (W3C's WCAG)
       </p>
       <p>
         However, if you are having trouble reading this website you can change
