style: minor changes to make html more readable

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         <input type="checkbox" id="preferences" name="preferences" checked />
         <label for="preferences"
           >Allow flashing elements Untick this to disable flashing and moving
-          elements</label
-        >
+          elements
+        </label>
       </div>
     </section>
 
@@ -168,6 +168,7 @@
         <li><a href="#">Jellyfish apocalypse is coming claim scientists</a></li>
       </ul>
     </section>
+
     <footer>
       <ul>
         <li><a href="#">News</a></li>
