--- a/index.html
+++ b/index.html
@@ -43,102 +43,100 @@
       </div>
     </section>
 
-    <section>
+    <article>
       <h1>Accessibility Features: Easy Wins</h1>
       <h2>Handy tips on how to create accessible websites for everyone</h2>
-    </section>
+      <a href="mailto:jimmy.eggs@hotmail.com">Jim Eggs (04.08.21)</a>
+      <img
+        src="/accessibility.png"
+        alt="Keyboard with blue accessibility button and partial view of a small world globe"
+      />
 
-    <a href="mailto:jimmy.eggs@hotmail.com">Jim Eggs (04.08.21)</a>
+      <section>
+        <h2>Introduction</h2>
+        <p>
+          Tim Berners Lee dreamt of a World Wide Web that would be free and
+          accessible to everyone. Sadly, the modern web is littered with poorly
+          designed websites and difficult to navigate code (for both developers
+          and users). This often comes down to a lack of understanding around
+          different user needs. Designing pages that are accessible for everyone
+          shouldn’t be too difficult. The developers at Tech Returners News have
+          collated an ‘easy wins' checklist for Web page accessibility.
+        </p>
+        <p>
+          Keep this guide handy... When creating your own websites you can check
+          these criteria off the list!
+        </p>
+        <p>
+          <a href="#"
+            >What would a truly accessible city look like? Read more..</a
+          >
+        </p>
+      </section>
 
-    <img
-      src="/accessibility.png"
-      alt="Keyboard with blue accessibility button and partial view of a small world globe"
-    />
+      <section>
+        <h2>Accessibility Checks:</h2>
+        <p>
+          Heading elements & Page Titles: HTML heading elements have been used
+          to represent page structure, supporting assistive technologies that
+          allow page navigation from heading to heading.
+        </p>
+        <p>
+          Re-size Text: You can vary text size by using your browser's text
+          resize settings (through Options or Preferences), text-only zoom, page
+          zoom (which also zooms images, buttons etc) without incurring styling
+          issues / text over-lapping or being cut off the page.
+        </p>
+        <p>
+          Alternative text for images: All images have been given appropriate
+          alternative text.
+        </p>
+        <p>
+          Link text: All hyperlinks should make sense when read out of context,
+          and hyperlinks are clearly presented in a different text style from
+          normal body text. If a link opens in a new browser page, it has been
+          labelled as doing so.
+        </p>
+        <p>
+          JavaScript independence: Where JavaScript or other scripts are used
+          for navigation or functionality, an alternative mechanism has been put
+          in place in case your browser does not support these scripts.
+        </p>
+        <p>
+          Colour contrast: has been checked for text and background colour
+          combinations to ensure that the contrast is sufficient and I have also
+          ensured that information is not referenced by colour alone.
+        </p>
+        <p>
+          Style sheets: If style sheets are not supported or are turned off,
+          information on the site can still be accessed and read.
+        </p>
+        <p>
+          Forms: forms are marked up correctly so people can interact with them
+          using only the keyboard, voice input or screen readers. The form
+          labels themselves are clickable, increasing the target area and making
+          it easier to select small radio buttons of checkboxes.
+        </p>
+        <p>
+          For more information on Web Accessibility view:
+          <a
+            href="https://www.w3.org/WAI/test-evaluate/preliminary/"
+            target="_blank"
+            >Easy Checks – A First Review of Web Accessibility (opens in a new
+            window)</a
+          >
+        </p>
+      </section>
 
-    <section>
-      <h2>Introduction</h2>
-      <p>
-        Tim Berners Lee dreamt of a World Wide Web that would be free and
-        accessible to everyone. Sadly, the modern web is littered with poorly
-        designed websites and difficult to navigate code (for both developers
-        and users). This often comes down to a lack of understanding around
-        different user needs. Designing pages that are accessible for everyone
-        shouldn’t be too difficult. The developers at Tech Returners News have
-        collated an ‘easy wins' checklist for Web page accessibility.
-      </p>
-      <p>
-        Keep this guide handy... When creating your own websites you can check
-        these criteria off the list!
-      </p>
-      <p>
-        <a href="#"
-          >What would a truly accessible city look like? Read more..</a
-        >
-      </p>
-    </section>
-
-    <section>
-      <h2>Accessibility Checks:</h2>
-      <p>
-        Heading elements & Page Titles: HTML heading elements have been used to
-        represent page structure, supporting assistive technologies that allow
-        page navigation from heading to heading.
-      </p>
-      <p>
-        Re-size Text: You can vary text size by using your browser's text resize
-        settings (through Options or Preferences), text-only zoom, page zoom
-        (which also zooms images, buttons etc) without incurring styling issues
-        / text over-lapping or being cut off the page.
-      </p>
-      <p>
-        Alternative text for images: All images have been given appropriate
-        alternative text.
-      </p>
-      <p>
-        Link text: All hyperlinks should make sense when read out of context,
-        and hyperlinks are clearly presented in a different text style from
-        normal body text. If a link opens in a new browser page, it has been
-        labelled as doing so.
-      </p>
-      <p>
-        JavaScript independence: Where JavaScript or other scripts are used for
-        navigation or functionality, an alternative mechanism has been put in
-        place in case your browser does not support these scripts.
-      </p>
-      <p>
-        Colour contrast: has been checked for text and background colour
-        combinations to ensure that the contrast is sufficient and I have also
-        ensured that information is not referenced by colour alone.
-      </p>
-      <p>
-        Style sheets: If style sheets are not supported or are turned off,
-        information on the site can still be accessed and read.
-      </p>
-      <p>
-        Forms: forms are marked up correctly so people can interact with them
-        using only the keyboard, voice input or screen readers. The form labels
-        themselves are clickable, increasing the target area and making it
-        easier to select small radio buttons of checkboxes.
-      </p>
-      <p>
-        For more information on Web Accessibility view:
-        <a
-          href="https://www.w3.org/WAI/test-evaluate/preliminary/"
-          target="_blank"
-          >Easy Checks – A First Review of Web Accessibility (opens in a new
-          window)</a
-        >
-      </p>
-    </section>
-
-    <section>
-      <h2>Conclusion</h2>
-      <p>
-        By spending just a little more time on getting the building blocks of
-        the web right, developers can help create an Internet that works for
-        <em>everyone.</em>
-      </p>
-    </section>
+      <section>
+        <h2>Conclusion</h2>
+        <p>
+          By spending just a little more time on getting the building blocks of
+          the web right, developers can help create an Internet that works for
+          <em>everyone.</em>
+        </p>
+      </section>
+    </article>
 
     <section>
       <h3>More stories</h3>
